fix(Forms): Add background-size to display missing background-image.

--- a/rocketbelt/components/radio-buttons/_radio-buttons-chunky.scss
+++ b/rocketbelt/components/radio-buttons/_radio-buttons-chunky.scss
@@ -61,6 +61,7 @@
           background-color: $color-selected;
           background-image: svg-url('<svg viewBox="629 458 16 12" xmlns="http://www.w3.org/2000/svg"><path fill="#{$color-fill}" fill-rule="evenodd" d="M641.992 458.395l-6.978 6.978-3.006-3.023-2.25 2.232 5.256 5.273 9.228-9.228z"/></svg>');
           background-position: center center;
+          background-size: 24px;
           background-repeat: no-repeat;
           transition: background-color 200ms ease-in, border 200ms ease-in;
         }
